# pir

./: CLAUDE.md  Cargo.toml  key-questions.md  lattice-crypto.md  ypir-theory.md
.cursor/plans/: pir_password_checker_poc_d2e1e9ce.plan.md
.github/workflows/: sync-hibp.yml
benches/results/: bench_003_rayon.md
docs/: keyword-pir.md
password-demo/: DEPLOY.md  Dockerfile  railway.toml
password-demo/hibp/examples/: check.rs
password-demo/hibp/src/: checker.rs  compact.rs  downloader.rs  lib.rs
password-demo/pir-wasm/: Cargo.toml  ui_pir_wasm.js
password-demo/pir-wasm/src/: lib.rs
password-demo/pir/src/: binary_fuse.rs  lib.rs  lwe_to_rlwe.rs  mode_selector.rs
password-demo/server/: Cargo.toml  railway.toml
password-demo/server/src/: main.rs
password-demo/ui/: .eslintignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
pir/: Cargo.toml
pir/benches/: double_pir_benchmark.rs  ntt_benchmark.rs  pir_benchmark.rs  simple_pir_benchmark.rs  ypir_benchmark.rs
pir/benches/results/: benchmark_summary.md  ntt_benchmark.md  ypir_benchmark.md
pir/src/: binary_fuse.rs  double_pir.rs  lib.rs  lwe_to_rlwe.rs  matrix_database.rs  mode_selector.rs  ntt.rs  params.rs  pir.rs  pir_trait.rs  regev.rs  ring.rs  ring_regev.rs  server.rs
pir/src/double/: client.rs  hint.rs  mod.rs  server.rs
pir/src/simple/: client.rs  mod.rs  server.rs
pir/src/ypir/: client.rs  mod.rs  params.rs  server.rs
pir/tests/: double_pir_binary_fuse_integration_test.rs  integration_test.rs  ypir_integration_test.rs
src/: client.rs  lib.rs  matrix_database.rs  params.rs  pir.rs  regev.rs  server.rs
tests/: integration_test.rs
ypir/: Cargo.toml
ypir/src/: client.rs  lib.rs  params.rs  server.rs
ypir/tests/: integration_test.rs
(+15 files in other folders)
