[package]
name = "pir"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
bincode = "1.3"
serde_json = "1.0"

[[bench]]
name = "simple_pir_benchmark"
harness = false

[[bench]]
name = "double_pir_benchmark"
harness = false

[[bench]]
name = "ntt_benchmark"
harness = false

[[bench]]
name = "ypir_benchmark"
harness = false

