[package]
name = "ypir"
version = "0.1.0"
edition = "2021"
description = "YPIR protocol: DoublePIR + LWE-to-RLWE packing for compressed responses"

[dependencies]
pir = { path = "../pir" }
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
