[package]
name = "pir-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for DoublePIR + Binary Fuse Filter"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# PIR library
pir = { path = "../../pir" }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation (WASM-compatible)
rand = { version = "0.9", features = ["small_rng"] }
rand_chacha = "0.9"

# Console logging for debugging
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }

# SHA-1 hashing for password->hash conversion
sha1 = "0.10"
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true

